// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Query Parameter Parsing and Formatting > Identifier type parameters > parses Identifier parameter as database with table param 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "database": {
                    "name": "db",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "name": {
                    "name": "tbl",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "limit": {
          "type": "Literal",
          "value": "1",
          "value_type": "UInt64",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > Identifier type parameters > parses Identifier parameter for database and table 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "database": {
                    "name": "db",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "name": {
                    "name": "tbl",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Literal",
            "value": "1",
            "value_type": "UInt64",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > Identifier type parameters > parses Identifier parameter in table reference 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": {
                    "name": "tbl",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Literal",
            "value": "1",
            "value_type": "UInt64",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > Identifier type parameters > parses Identifier parameter with regular table 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "database": {
                    "name": "db",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "name": "my_table",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Literal",
            "value": "1",
            "value_type": "UInt64",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > basic parameter types > parses Decimal types 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "a",
            "param_type": "Decimal(10, 2)",
            "type": "QueryParameter",
          },
          {
            "name": "b",
            "param_type": "Decimal128(4)",
            "type": "QueryParameter",
          },
          {
            "name": "c",
            "param_type": "Decimal256(8)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > basic parameter types > parses FixedString type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "fs",
            "param_type": "FixedString(16)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > basic parameter types > parses Float types 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "a",
            "param_type": "Float32",
            "type": "QueryParameter",
          },
          {
            "name": "b",
            "param_type": "Float64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > basic parameter types > parses Int types 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "a",
            "param_type": "Int8",
            "type": "QueryParameter",
          },
          {
            "name": "b",
            "param_type": "Int16",
            "type": "QueryParameter",
          },
          {
            "name": "c",
            "param_type": "Int32",
            "type": "QueryParameter",
          },
          {
            "name": "d",
            "param_type": "Int64",
            "type": "QueryParameter",
          },
          {
            "name": "e",
            "param_type": "Int128",
            "type": "QueryParameter",
          },
          {
            "name": "f",
            "param_type": "Int256",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > basic parameter types > parses UInt types 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "a",
            "param_type": "UInt8",
            "type": "QueryParameter",
          },
          {
            "name": "b",
            "param_type": "UInt16",
            "type": "QueryParameter",
          },
          {
            "name": "c",
            "param_type": "UInt32",
            "type": "QueryParameter",
          },
          {
            "name": "d",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
          {
            "name": "e",
            "param_type": "UInt128",
            "type": "QueryParameter",
          },
          {
            "name": "f",
            "param_type": "UInt256",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > basic parameter types > parses boolean and UUID types 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "b",
            "param_type": "Bool",
            "type": "QueryParameter",
          },
          {
            "name": "u",
            "param_type": "UUID",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > basic parameter types > parses date/time types 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "d",
            "param_type": "Date",
            "type": "QueryParameter",
          },
          {
            "name": "dt",
            "param_type": "DateTime",
            "type": "QueryParameter",
          },
          {
            "name": "dt64",
            "param_type": "DateTime64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > basic parameter types > parses simple scalar types 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "x",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
          {
            "name": "y",
            "param_type": "String",
            "type": "QueryParameter",
          },
          {
            "name": "z",
            "param_type": "Float64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses Array type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "arr",
            "param_type": "Array(UInt64)",
            "type": "QueryParameter",
          },
          {
            "name": "sarr",
            "param_type": "Array(String)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses Enum type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "e",
            "param_type": "Enum8('a' = 1, 'b' = 2)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses LowCardinality Nullable type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "lc",
            "param_type": "LowCardinality(Nullable(String))",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses LowCardinality type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "lc",
            "param_type": "LowCardinality(String)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses Map type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "m",
            "param_type": "Map(String, UInt64)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses Nullable Array type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "x",
            "param_type": "Array(Nullable(String))",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses Nullable type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "x",
            "param_type": "Nullable(UInt64)",
            "type": "QueryParameter",
          },
          {
            "name": "y",
            "param_type": "Nullable(String)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses Tuple type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "t",
            "param_type": "Tuple(UInt64, String, Float32)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses complex Map type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "m",
            "param_type": "Map(UUID, Array(Float32))",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses named Tuple type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "t",
            "param_type": "Tuple(a UInt64, b String)",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > complex parameter types > parses nested Array type 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "nested",
            "param_type": "Array(Array(UInt32))",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameter formatting > normalizes whitespace around colon 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "x",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameter formatting > preserves complex type string in formatting 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "m",
            "param_type": "Map(UUID, Array(Float32))",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameter formatting > preserves positional parameter names 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "$0",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in CTE (WITH clause) > uses parameter in CTE expression 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "val",
            "type": "Identifier",
          },
        ],
        "type": "SelectQuery",
        "with": [
          {
            "alias": "val",
            "name": "x",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in FROM clause > uses Identifier parameter as database.table 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "database": {
                    "name": "db",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "name": {
                    "name": "tbl",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in FROM clause > uses Identifier parameter as table name 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": {
                    "name": "tbl",
                    "param_type": "Identifier",
                    "type": "QueryParameter",
                  },
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in GROUP BY clause > uses parameter in GROUP BY 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "group_by": [
          {
            "name": "x",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
        "select": [
          {
            "name": "x",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
          {
            "arguments": [],
            "name": "count",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in HAVING clause > uses parameter in HAVING 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "group_by": [
          {
            "name": "x",
            "type": "Identifier",
          },
        ],
        "having": {
          "arguments": [
            {
              "name": "cnt",
              "type": "Identifier",
            },
            {
              "name": "min_count",
              "param_type": "UInt64",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "greater",
          "type": "Function",
        },
        "select": [
          {
            "name": "x",
            "type": "Identifier",
          },
          {
            "alias": "cnt",
            "arguments": [],
            "name": "count",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in JOIN clause > uses parameter in JOIN ON condition 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t1",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t2",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "table_join": {
                "kind": "INNER",
                "on": {
                  "arguments": [
                    {
                      "arguments": [
                        {
                          "name": "t1.id",
                          "name_parts": [
                            "t1",
                            "id",
                          ],
                          "type": "Identifier",
                        },
                        {
                          "name": "t2.id",
                          "name_parts": [
                            "t2",
                            "id",
                          ],
                          "type": "Identifier",
                        },
                      ],
                      "is_operator": true,
                      "name": "equals",
                      "type": "Function",
                    },
                    {
                      "arguments": [
                        {
                          "name": "t2.val",
                          "name_parts": [
                            "t2",
                            "val",
                          ],
                          "type": "Identifier",
                        },
                        {
                          "name": "min_val",
                          "param_type": "UInt64",
                          "type": "QueryParameter",
                        },
                      ],
                      "is_operator": true,
                      "name": "greater",
                      "type": "Function",
                    },
                  ],
                  "is_operator": true,
                  "name": "and",
                  "type": "Function",
                },
                "type": "TableJoin",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in LIMIT/OFFSET clause > uses parameter in LIMIT 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "limit": {
          "name": "n",
          "param_type": "UInt64",
          "type": "QueryParameter",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in LIMIT/OFFSET clause > uses parameter in OFFSET 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "limit": {
          "type": "Literal",
          "value": "10",
          "value_type": "UInt64",
        },
        "offset": {
          "name": "off",
          "param_type": "UInt64",
          "type": "QueryParameter",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in LIMIT/OFFSET clause > uses parameter in both LIMIT and OFFSET 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "limit": {
          "name": "n",
          "param_type": "UInt64",
          "type": "QueryParameter",
        },
        "offset": {
          "name": "off",
          "param_type": "UInt64",
          "type": "QueryParameter",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in ORDER BY clause > uses parameter in ORDER BY expression 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "order_by": [
          {
            "direction": "ASC",
            "expression": {
              "name": "col",
              "param_type": "UInt64",
              "type": "QueryParameter",
            },
            "type": "OrderByElement",
          },
        ],
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in PREWHERE clause > uses parameter in PREWHERE 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "prewhere": {
          "arguments": [
            {
              "name": "x",
              "type": "Identifier",
            },
            {
              "name": "threshold",
              "param_type": "UInt64",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "greater",
          "type": "Function",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in SELECT clause > uses parameter as selected expression 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "x",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in SELECT clause > uses parameter in CAST expression 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "arguments": [
              {
                "name": "x",
                "param_type": "String",
                "type": "QueryParameter",
              },
              {
                "type": "Literal",
                "value": "UInt64",
                "value_type": "String",
              },
            ],
            "name": "CAST",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in SELECT clause > uses parameter in arithmetic expression 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "arguments": [
              {
                "name": "x",
                "param_type": "UInt64",
                "type": "QueryParameter",
              },
              {
                "name": "y",
                "param_type": "UInt64",
                "type": "QueryParameter",
              },
            ],
            "is_operator": true,
            "name": "plus",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in SELECT clause > uses parameter in function call 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "arguments": [
              {
                "name": "d",
                "param_type": "String",
                "type": "QueryParameter",
              },
            ],
            "name": "toDate",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in SELECT clause > uses parameter with :: cast operator 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "arguments": [
              {
                "name": "x",
                "param_type": "String",
                "type": "QueryParameter",
              },
              {
                "type": "Literal",
                "value": "UInt64",
                "value_type": "String",
              },
            ],
            "is_operator": true,
            "name": "CAST",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in SELECT clause > uses parameter with alias 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "alias": "val",
            "name": "x",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in SELECT clause > uses parameter with multiple expressions 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "a",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
          {
            "name": "b",
            "param_type": "String",
            "type": "QueryParameter",
          },
          {
            "name": "c",
            "param_type": "Float64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in SETTINGS clause > uses parameter in SETTINGS value 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "settings": {
          "changes": {
            "max_threads": "",
          },
          "type": "Settings",
        },
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in UNION queries > uses parameter in UNION ALL members 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "a",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
      {
        "select": [
          {
            "name": "b",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter in IN expression 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "name": "x",
              "type": "Identifier",
            },
            {
              "name": "val",
              "param_type": "UInt64",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "in",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter in LIKE expression 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "name": "name",
              "type": "Identifier",
            },
            {
              "name": "pattern",
              "param_type": "String",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "like",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter in complex boolean expression 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "arguments": [
                {
                  "arguments": [
                    {
                      "name": "a",
                      "param_type": "UInt64",
                      "type": "QueryParameter",
                    },
                    {
                      "type": "Literal",
                      "value": "0",
                      "value_type": "UInt64",
                    },
                  ],
                  "is_operator": true,
                  "name": "greater",
                  "type": "Function",
                },
                {
                  "arguments": [
                    {
                      "name": "b",
                      "param_type": "String",
                      "type": "QueryParameter",
                    },
                    {
                      "type": "Literal",
                      "value": "",
                      "value_type": "String",
                    },
                  ],
                  "is_operator": true,
                  "name": "notEquals",
                  "type": "Function",
                },
              ],
              "is_operator": true,
              "name": "and",
              "type": "Function",
            },
            {
              "name": "c",
              "param_type": "Bool",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "or",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter in equality comparison 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "name": "x",
              "type": "Identifier",
            },
            {
              "name": "val",
              "param_type": "UInt64",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "equals",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter in inequality comparison 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "name": "x",
              "type": "Identifier",
            },
            {
              "name": "val",
              "param_type": "String",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "notEquals",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter in range comparison 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "arguments": [
                {
                  "name": "x",
                  "type": "Identifier",
                },
                {
                  "name": "lo",
                  "param_type": "UInt64",
                  "type": "QueryParameter",
                },
              ],
              "is_operator": true,
              "name": "greater",
              "type": "Function",
            },
            {
              "arguments": [
                {
                  "name": "x",
                  "type": "Identifier",
                },
                {
                  "name": "hi",
                  "param_type": "UInt64",
                  "type": "QueryParameter",
                },
              ],
              "is_operator": true,
              "name": "less",
              "type": "Function",
            },
          ],
          "is_operator": true,
          "name": "and",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter on both sides of comparison 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "name": "a",
              "param_type": "UInt64",
              "type": "QueryParameter",
            },
            {
              "name": "b",
              "param_type": "UInt64",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "equals",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter with BETWEEN 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "arguments": [
                {
                  "name": "x",
                  "type": "Identifier",
                },
                {
                  "name": "lo",
                  "param_type": "UInt64",
                  "type": "QueryParameter",
                },
              ],
              "is_operator": true,
              "name": "greaterOrEquals",
              "type": "Function",
            },
            {
              "arguments": [
                {
                  "name": "x",
                  "type": "Identifier",
                },
                {
                  "name": "hi",
                  "param_type": "UInt64",
                  "type": "QueryParameter",
                },
              ],
              "is_operator": true,
              "name": "lessOrEquals",
              "type": "Function",
            },
          ],
          "is_operator": true,
          "name": "and",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in WHERE clause > uses parameter with IS NULL check 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "name": "x",
              "param_type": "Nullable(UInt64)",
              "type": "QueryParameter",
            },
          ],
          "is_operator": true,
          "name": "isNull",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in expressions with operators > uses parameter as function argument with multiple args 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "arguments": [
              {
                "name": "cond",
                "param_type": "Bool",
                "type": "QueryParameter",
              },
              {
                "name": "a",
                "param_type": "UInt64",
                "type": "QueryParameter",
              },
              {
                "name": "b",
                "param_type": "UInt64",
                "type": "QueryParameter",
              },
            ],
            "name": "if",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in expressions with operators > uses parameter in CASE expression 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "arguments": [
              {
                "arguments": [
                  {
                    "name": "x",
                    "type": "Identifier",
                  },
                  {
                    "name": "threshold",
                    "param_type": "UInt64",
                    "type": "QueryParameter",
                  },
                ],
                "is_operator": true,
                "name": "greater",
                "type": "Function",
              },
              {
                "type": "Literal",
                "value": "high",
                "value_type": "String",
              },
              {
                "type": "Literal",
                "value": "low",
                "value_type": "String",
              },
            ],
            "name": "multiIf",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in expressions with operators > uses parameter in array subscript 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "arguments": [
              {
                "name": "arr",
                "type": "Identifier",
              },
              {
                "name": "idx",
                "param_type": "UInt64",
                "type": "QueryParameter",
              },
            ],
            "is_operator": true,
            "name": "arrayElement",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in expressions with operators > uses parameter with concatenation operator 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "arguments": [
              {
                "name": "prefix",
                "param_type": "String",
                "type": "QueryParameter",
              },
              {
                "type": "Literal",
                "value": "_suffix",
                "value_type": "String",
              },
            ],
            "is_operator": true,
            "name": "concat",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in expressions with operators > uses parameter with negation 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "arguments": [
              {
                "name": "x",
                "param_type": "UInt64",
                "type": "QueryParameter",
              },
            ],
            "is_operator": true,
            "name": "negate",
            "type": "Function",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in subqueries > uses parameter in IN subquery 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "database_and_table_name": {
                  "name": "t",
                  "type": "TableIdentifier",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
        "where": {
          "arguments": [
            {
              "name": "x",
              "type": "Identifier",
            },
            {
              "query": {
                "selects": [
                  {
                    "from": {
                      "children": [
                        {
                          "table_expression": {
                            "database_and_table_name": {
                              "name": "t2",
                              "type": "TableIdentifier",
                            },
                            "type": "TableExpression",
                          },
                          "type": "TablesInSelectQueryElement",
                        },
                      ],
                      "type": "TablesInSelectQuery",
                    },
                    "select": [
                      {
                        "name": "id",
                        "type": "Identifier",
                      },
                    ],
                    "type": "SelectQuery",
                    "where": {
                      "arguments": [
                        {
                          "name": "y",
                          "type": "Identifier",
                        },
                        {
                          "name": "threshold",
                          "param_type": "UInt64",
                          "type": "QueryParameter",
                        },
                      ],
                      "is_operator": true,
                      "name": "greater",
                      "type": "Function",
                    },
                  },
                ],
                "type": "SelectWithUnionQuery",
              },
              "type": "Subquery",
            },
          ],
          "is_operator": true,
          "name": "in",
          "type": "Function",
        },
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > parameters in subqueries > uses parameter in subquery WHERE 1`] = `
[
  {
    "selects": [
      {
        "from": {
          "children": [
            {
              "table_expression": {
                "subquery": {
                  "query": {
                    "selects": [
                      {
                        "from": {
                          "children": [
                            {
                              "table_expression": {
                                "database_and_table_name": {
                                  "name": "t",
                                  "type": "TableIdentifier",
                                },
                                "type": "TableExpression",
                              },
                              "type": "TablesInSelectQueryElement",
                            },
                          ],
                          "type": "TablesInSelectQuery",
                        },
                        "select": [
                          {
                            "type": "Asterisk",
                          },
                        ],
                        "type": "SelectQuery",
                        "where": {
                          "arguments": [
                            {
                              "name": "x",
                              "type": "Identifier",
                            },
                            {
                              "name": "val",
                              "param_type": "UInt64",
                              "type": "QueryParameter",
                            },
                          ],
                          "is_operator": true,
                          "name": "equals",
                          "type": "Function",
                        },
                      },
                    ],
                    "type": "SelectWithUnionQuery",
                  },
                  "type": "Subquery",
                },
                "type": "TableExpression",
              },
              "type": "TablesInSelectQueryElement",
            },
          ],
          "type": "TablesInSelectQuery",
        },
        "select": [
          {
            "type": "Asterisk",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > positional parameters ($N syntax) > mixes positional and named parameters 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "$0",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
          {
            "name": "name",
            "param_type": "String",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > positional parameters ($N syntax) > parses $0 positional parameter 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "$0",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;

exports[`Query Parameter Parsing and Formatting > positional parameters ($N syntax) > parses multiple positional parameters 1`] = `
[
  {
    "selects": [
      {
        "select": [
          {
            "name": "$0",
            "param_type": "UInt64",
            "type": "QueryParameter",
          },
          {
            "name": "$1",
            "param_type": "String",
            "type": "QueryParameter",
          },
          {
            "name": "$2",
            "param_type": "Float64",
            "type": "QueryParameter",
          },
        ],
        "type": "SelectQuery",
      },
    ],
    "type": "SelectWithUnionQuery",
  },
]
`;
